test/scc_test/decl/semantic-errors/049.a
049.t:1:5: error: size of array must be greater than zero